refactor: Ladder 객체 변수명 변경 및 불변 처리
Ladder 객체에 있던 변수들이 상수명 컨벤션을 따르는 것을 수정했습니다.
또한 final 로 처리를 했음에도 ArrayList 들이 수정되는 것을 막기 위해
List.copyOf 를 사용했습니다.
추가적으로 Input 클래스의 getPlayerNames 메소드가 String[] 대신
ArrayList를 return 하도록 수정했습니다.